# pi-estimation

./: .gitignore  CMakeLists.txt  LICENSE
HW1/: check_specifications.sh  output.txt  run_hw1.ipynb
HW1/problem3/: mandel_parallel_atomic.c  mandel_parallel_critical.c  mandel_parallel_false_sharing.c  mandel_parallel_padding.c  mandel_parallel_reduction.c  run_parallel_atomic.sh  run_parallel_critical.sh  run_parallel_false_sharing.sh  run_parallel_padding.sh  run_parallel_reduction.sh  run_serial.sh
HW1/problem5/: prime_parallel_schedule.c  run_parallel_schedule.sh
HW2/: run_hw2.ipynb
HW2/FirstTouch/: firstTouch.c  run.sh
HW2/Gauss-Seidel/: GS_tasks_blocks_parallel.c  GS_tasks_parallel.c  run_GS_serial.sh  run_GS_tasks_blocks_parallel.sh
HW2/LU/: LU_parallel.c  run_LU_parallel.sh  run_LU_serial.sh
HW2/MatMul/: matmul_parallel.c  run_matmul_parallel.sh  run_matmul_serial.sh
HW2/n-body/: n-body_parallel.c  run_n-body_parallel.sh  run_n-body_serial.sh
newton/.ipynb_checkpoints/: naive-checkpoint.cpp
